0.03
 - Add minimal version of Perl.
 - Fix test dependencies.
 - Remove diacritics from author name.
 - Update Module::Install to 1.16 version.

0.02 2014-10-13T11:19:30+02:00
 - Add LICENSE file.

0.01 2014-09-03T13:56:45+02:00
 - First version.