@@ -3,6 +3,8 @@ examples/ex1.pl
 examples/ex2.pl
 HTMLCustomPage.pm
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -17,7 +19,7 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Error-Pure-Output-Tags-HTMLCustomPage/00-use.t
-t/Error-Pure-Output-Tags-HTMLCustomPage/01-version.t
-t/Error-Pure-Output-Tags-HTMLCustomPage/02-pod_coverage.t
-t/Error-Pure-Output-Tags-HTMLCustomPage/03-pod.t
+t/Error-Pure-Output-Tags-HTMLCustomPage/01-use.t
+t/Error-Pure-Output-Tags-HTMLCustomPage/02-version.t
+xt/Error-Pure-Output-Tags-HTMLCustomPage/01-pod_coverage.t
+xt/Error-Pure-Output-Tags-HTMLCustomPage/02-pod.t
