@@ -5,8 +5,6 @@ author:
 build_requires:
   ExtUtils::MakeMaker: 6.36
   Test::More: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
   Test::NoWarnings: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
@@ -23,6 +21,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Exporter: 0
   HTTP::Headers::Fast: 0
