@@ -8,9 +8,14 @@ use inc::Module::Install;
 # Definition.
 abstract 'Error::Pure HTML output helper.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.03;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'Error-Pure-Output-Tags-HTMLCustomPage';
 readme_from 'HTMLCustomPage.pm';
+recursive_author_tests('xt');
 requires 'Exporter' => 0;
 requires 'HTTP::Headers::Fast' => 0;
 requires 'Readonly' => 0;
@@ -23,8 +28,6 @@ resources 'repository' => 'git://github.com/tupinek/'.
 	'Error-Pure-Output-Tags-HTMLCustomPage';
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::More' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.03';
 
