@@ -1,6 +1,7 @@
 0.03
  - Add minimal version of Perl.
  - Fix test dependencies.
+ - Move author tests to xt/ directory.
  - Remove diacritics from author name.
  - Update Module::Install to 1.16 version.
 
